fix: Horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@ body {
   background-color: #fdfdfd;
   margin: 0;
   position: relative;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 ul,
